# replication-package-issue-linking

./: README.md
code/linker/: Cargo.toml  pyproject.toml
code/linker/python/linker/: __main__.py  _accelerator.pyi
code/linker/python/linker/commands/: __init__.py  base.py
code/linker/python/linker/commands/user/: analyse_commit_sizes.py  analyse_stats_matrix.py  clean_text.py  correlate_identifiers.py  evaluate.py  generate_feature_plan_from_db.py  import_commits.py  issue_type_ablation.py  make_matrix.py  refine_commit_links.py  update_issues.py  vsm.py
code/linker/python/linker/features/: abstract.py  augmentation.py  datasets.py  file_utils.py  loader.py  under_sampling.py
code/linker/python/linker/models/siamese/: __init__.py  base.py  mlp.py  mlp_cosine_similarity.py  mlp_llm_cosine_similarity.py  text_cnn.py
code/linker/python/linker/models/text/: __init__.py  aggregating_transformer.py  aggregating_transformer_fine_tuning.py  base.py  dual_transformer_embedding.py  dual_transformer_fine_tuning.py  dummy.py  mlp_cosine_similarity.py  simple_mlp.py  (+2 more)
code/linker/python/linker/utils/: args.py  calc_size.py  git_utils.py  issue_db.py  issue_key_extractor.py  logs.py  process_runner.py  resources.py  sparse.py  word_embedding.py
code/linker/python/resources/: extensions.json
code/linker/src/: bm25.rs  lib.rs  ml.rs  nlp.rs
code/linker/src/ml/: errors.rs  index.rs  index_loader.rs  live_index_loader.rs  raw_index.rs  resolver.rs  shared_types.rs
code/linker/src/nlp/: pos.rs  py_lib.rs  replacement.rs
code/linker/src/nlp/replacement/: char_trie.rs
(+511 files in other folders)
