[package]
name = "linker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_accelerator"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.95"
deunicode = "1.6.0"
lazy_static = "1.5.0"
peekmore = "1.2.0"
pyo3 = { version = "0.23.4", features = ["extension-module"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
rayon = "1.10.0"
regex = "1.11.1"
error_set = "0.8.5"